Apply suggestion from @dliubarskyi